Text modifications in index.html file

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,9 +37,8 @@
 		<div class="main-wrapper">
 			<div class="projects-header text-center">
 				<h1>Web Projects</h1>
-				<h4 class="pt-3">Hey, my name is <span class="purple-color-1">Ben</span>.<br>Take a look at some of my web-based projects :-)</h4>
+				<h4 class="pt-3">Hello and welcome!<br>Feel free to take a look at some of my non-profit <br><span class="purple-color-1">web-based projects<span>.</h4>
 			</div>
-			<!-- <section class="projects-wrapper"> -->
 			<ul class="project-list">
 				<li class="project">
 					<a href="http://benproject.pythonanywhere.com/" target="_blank">
@@ -54,7 +53,7 @@
 							<li class="python d-inline"></li>
 						</ul>
 						<h5>DigitalML</h5>
-						<p>Designed for a fake ML enterprise.<br>Basically a full-of-buzzwords site, made mostly for self-improvement & entertainment.<br>Don't forget trying the Digenerator! :-)</p>
+						<p>Designed as a demo for a non-existent ML enterprise.<br>Made mostly for self-improvement purposes.<br>Don't forget trying out the <i>Digenerator</i>! &#128515</p>
 						<div class="project-buttons-div">
 							<a target="_blank" class="btn btn-primary bouncy" href="http://benproject.pythonanywhere.com/">
 								View Project
@@ -79,7 +78,7 @@
 							<li class="sql d-inline"></li>							
 						</ul>
 						<h5>CyberArray</h5>
-						<p>Cute web-based, cyber-looking, CLI-ish quiz for Cyber Officers IDF course (i.e Kamanim).<br>Still being used in the course. That was pretty much my first web project.</p>
+						<p>Cyber-looking, CLI-ish quiz for the Cyber Officers IDF course (i.e Kamanim).<br>Being currently used in the course. That was pretty much my first web project.</p>
 						<div class="project-buttons-div">
 							<a target="_blank" class="btn btn-outline-primary bouncy" style="animation-delay: 0.07s" href="https://github.com/putskan/Ethi-s-Schnitzel">
 								GitHub
@@ -102,7 +101,7 @@
 							<li class="sql d-inline"></li>							
 						</ul>
 						<h5>Bahad 15</h5>
-						<p>Created for Intellegence IDF Training Base, in order to simplify the courses' reception days.<br>Please DO NOT submit any of the forms, due to the fact that the website is used by the staff.</p>
+						<p>Created for an intelligence IDF Training Base, for the simplification of reception days.<br>Please do not submit any of the forms, due to the active use of the website by the staff.</p>
 						<div class="project-buttons-div">
 							<a target="_blank" class="btn btn-primary bouncy" href="https://kamanaman101.pythonanywhere.com/">
 								View Project
@@ -125,7 +124,7 @@
 							<li class="bootstrap d-inline"></li>
 						</ul>
 						<h5>Ben's Website</h5>
-						<p>The website you're currently visiting.<br><br>
+						<p>The website you're currently visiting &#128517.<br><br>
 						<div class="project-buttons-div">
 							<a target="_blank" class="btn btn-primary bouncy" href="https://www.google.com/search?sxsrf=ALeKk02FR6q4XqoJXlQoXc7mBsNjf-DGFg:1598185612077&q=recursion&spell=1&sa=X&ved=2ahUKEwiEgcWtqbHrAhXox4UKHQ_mBy8QBSgAegQIDxAr&biw=1745&bih=836">
 								View Project
@@ -150,7 +149,7 @@
 							<li class="python d-inline"></li>
 						</ul>
 						<h5>Clown Website</h5>
-						<p>Website made with ♥ for an entertainment business.<br><br>Was not lunched to production just yet & only 90% responsive so far :)</p>
+						<p>Made with &#10084; for an entertainment business.<br><br>Is not yet finished and fully responsive.</p>
 						<div class="project-buttons-div">
 							<a target="_blank" class="btn btn-primary bouncy" href="http://mule9003.pythonanywhere.com/">
 								View Project
