--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,6 @@
         <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon.ico') }}"/>		
 		<!-- mobile compatibility -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
 		<!-- styles -->
 		<!-- bootstrap related - latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -30,140 +29,36 @@
 			<h3 class="d-inline font-italic logo">
 				<span class="purple-color-1 font-weight-bold">&lt;</span>Ben's Site<span class="purple-color-1 font-weight-bold">&gt;</span>
 			</h3>
-<!-- 			<nav class="">
-			</nav> -->
+		<!--<nav class=""></nav> -->
 		</header>
-		
-		<div class="main-wrapper">
-			<div class="projects-header text-center">
-				<h1>Web Projects</h1>
-				<h4 class="pt-3">Hello and welcome!<br>Feel free to take a look at some of my non-profit <br><span class="purple-color-1">web-based projects<span>.</h4>
+		<div class="bg-container purple-bg-1 pb-3">
+			<div class="main-wrapper">
+				<div class="projects-header text-center text-white row justify-content-center">
+					<h1 class="col-12 col-sm-12">Welcome</h1>
+					<h4 class="pt-3 col-12 col-sm-12 col-md-10 col-lg-4">Take a look at some of my projects</h4>
+				</div>
+				<ul class="project-types-cards row justify-content-center my-5">
+					<li class="col-10 col-sm-6 col-lg-5 col-xl-4 my-4">
+						<a href="./web-projects">
+							<div>
+								<i class="fab fa-chrome"></i>
+								<h3>Web Projects</h3>
+							</div>
+						</a>
+					</li>
+					<div class="w-100"></div>
+					<li class="col-10 col-sm-6 col-lg-5 col-xl-4 my-4">
+						<a href="./games-dev">
+							<div>
+								<i class="fas fa-trophy"></i>
+								<h3>Games Dev</h3>
+							</div>
+						</a>
+					</li>
+				</ul>
 			</div>
-			<ul class="project-list">
-				<li class="project">
-					<a href="http://benproject.pythonanywhere.com/" target="_blank">
-						<div class="project-img" style="background-image: url('./static/img/projects/digitalml.jpg');"></div>
-					</a>
-					<div class="project-info">
-						<ul class="used-skills">
-							<li class="html d-inline"></li>
-							<li class="css d-inline"></li>
-							<li class="bootstrap d-inline"></li>
-							<li class="js d-inline"></li>
-							<li class="python d-inline"></li>
-						</ul>
-						<h5>DigitalML</h5>
-						<p>Designed as a demo for a non-existent ML enterprise.<br>Made mostly for self-improvement purposes.<br>Don't forget trying out the <i>Digenerator</i>! &#128515</p>
-						<div class="project-buttons-div">
-							<a target="_blank" class="btn btn-primary bouncy" href="http://benproject.pythonanywhere.com/">
-								View Project
-							</a>
-							<a target="_blank" class="btn btn-outline-primary bouncy" style="animation-delay: 0.07s" href="https://github.com/putskan/DigitalML">
-								GitHub
-							</a>
-						</div>
-					</div>
-				</li>
-
-				<li class="project">
-					<a href="https://github.com/putskan/Ethi-s-Schnitzel" target="_blank">
-						<div class="project-img" style="background-image: url('./static/img/projects/CyberArray.jpg');"></div>
-					</a>
-					<div class="project-info">
-						<ul class="used-skills">
-							<li class="html d-inline"></li>
-							<li class="css d-inline"></li>
-							<li class="js d-inline"></li>
-							<li class="python d-inline"></li>
-							<li class="sql d-inline"></li>							
-						</ul>
-						<h5>CyberArray</h5>
-						<p>Cyber-looking, CLI-ish quiz for the Cyber Officers IDF course (i.e Kamanim).<br>Being currently used in the course. That was pretty much my first web project.</p>
-						<div class="project-buttons-div">
-							<a target="_blank" class="btn btn-outline-primary bouncy" style="animation-delay: 0.07s" href="https://github.com/putskan/Ethi-s-Schnitzel">
-								GitHub
-							</a>
-						</div>
-					</div>
-				</li>
-
-				<li class="project">
-					<a href="https://kamanaman101.pythonanywhere.com/" target="_blank">
-						<div class="project-img" style="background-image: url('./static/img/projects/KamanAman.jpg');"></div>
-					</a>
-					<div class="project-info">
-						<ul class="used-skills">
-							<li class="html d-inline"></li>
-							<li class="css d-inline"></li>
-							<li class="bootstrap d-inline"></li>
-							<li class="js d-inline"></li>
-							<li class="python d-inline"></li>
-							<li class="sql d-inline"></li>							
-						</ul>
-						<h5>Bahad 15</h5>
-						<p>Created for an intelligence IDF Training Base, for the simplification of reception days.<br>Please do not submit any of the forms, due to the active use of the website by the staff.</p>
-						<div class="project-buttons-div">
-							<a target="_blank" class="btn btn-primary bouncy" href="https://kamanaman101.pythonanywhere.com/">
-								View Project
-							</a>
-							<a target="_blank" class="btn btn-outline-primary bouncy" style="animation-delay: 0.07s" href="https://github.com/putskan/bahad15">
-								GitHub
-							</a>
-						</div>
-					</div>
-				</li>
-
-				<li class="project">
-					<a href="https://www.google.com/search?sxsrf=ALeKk02FR6q4XqoJXlQoXc7mBsNjf-DGFg:1598185612077&q=recursion&spell=1&sa=X&ved=2ahUKEwiEgcWtqbHrAhXox4UKHQ_mBy8QBSgAegQIDxAr&biw=1745&bih=836" target="_blank">
-						<div class="project-img" style="background-image: url('./static/img/projects/bens-site.jpg');"></div>
-					</a>
-					<div class="project-info">
-						<ul class="used-skills">
-							<li class="html d-inline"></li>
-							<li class="css d-inline"></li>
-							<li class="bootstrap d-inline"></li>
-						</ul>
-						<h5>Ben's Website</h5>
-						<p>The website you're currently visiting &#128517.<br><br>
-						<div class="project-buttons-div">
-							<a target="_blank" class="btn btn-primary bouncy" href="https://www.google.com/search?sxsrf=ALeKk02FR6q4XqoJXlQoXc7mBsNjf-DGFg:1598185612077&q=recursion&spell=1&sa=X&ved=2ahUKEwiEgcWtqbHrAhXox4UKHQ_mBy8QBSgAegQIDxAr&biw=1745&bih=836">
-								View Project
-							</a>
-							<a target="_blank" class="btn btn-outline-primary bouncy" style="animation-delay: 0.07s" href="https://www.google.com/search?sxsrf=ALeKk02FR6q4XqoJXlQoXc7mBsNjf-DGFg:1598185612077&q=recursion&spell=1&sa=X&ved=2ahUKEwiEgcWtqbHrAhXox4UKHQ_mBy8QBSgAegQIDxAr&biw=1745&bih=836">
-								GitHub
-							</a>
-						</div>
-					</div>
-				</li>
-				
-				<li class="project">
-					<a href="http://mule9003.pythonanywhere.com/" target="_blank">
-						<div class="project-img" style="background-image: url('./static/img/projects/clown.jpg');"></div>
-					</a>
-					<div class="project-info">
-						<ul class="used-skills">
-							<li class="html d-inline"></li>
-							<li class="css d-inline"></li>
-							<li class="bootstrap d-inline"></li>
-							<li class="js d-inline"></li>
-							<li class="python d-inline"></li>
-						</ul>
-						<h5>Clown Website</h5>
-						<p>Made with &#10084; for an entertainment business.<br><br>Is not yet finished and fully responsive.</p>
-						<div class="project-buttons-div">
-							<a target="_blank" class="btn btn-primary bouncy" href="http://mule9003.pythonanywhere.com/">
-								View Project
-							</a>
-							<a target="_blank" class="btn btn-outline-primary bouncy" style="animation-delay: 0.07s" href="https://github.com/putskan/yarden-itach-website">
-								GitHub
-							</a>
-						</div>
-					</div>
-				</li>
-			</ul>
 		</div>
-
-		<footer class="purple-bg-1 text-white">
+		<footer class="purple-bg-1 text-white rounded-0 border-top border-light">
 			<p class="copyright">© 2020 Copyright:
 				<a class="" href="https://www.linkedin.com/in/ben-lahav-018450148/" target="_blank"> Ben Lahav</a>
 			</p>
