Add shrinking effect to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 					<h1 class="col-12 col-sm-12">Welcome</h1>
 					<h4 class="pt-3 col-12 col-sm-12 col-md-10 col-lg-4">Take a look at some of my projects</h4>
 				</div>
-				<ul class="project-types-cards row justify-content-center my-5">
+				<ul id="index-project-types-container" class="project-types-cards row justify-content-center my-5">
 					<li class="col-10 col-sm-6 col-lg-5 col-xl-4 my-4">
 						<a href="./web-projects">
 							<div>
