--- a/templates/web-projects.html
+++ b/templates/web-projects.html
@@ -163,7 +163,7 @@
 			</ul>
 		</div>
 
-		<footer class="purple-bg-1 text-white">
+		<footer class="purple-bg-1 text-white shadow-lg">
 			<p class="copyright">© 2020 Copyright:
 				<a class="" href="https://www.linkedin.com/in/ben-lahav-018450148/" target="_blank"> Ben Lahav</a>
 			</p>
