--- a/templates/web-projects.html
+++ b/templates/web-projects.html
@@ -10,6 +10,8 @@
 		<!-- styles -->
 		<!-- bootstrap related - latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+		<!-- Font Awesome -->
+		<link href="{{ url_for('static', filename='font-awesome/css/all.css') }}" rel="stylesheet" type="text/css" >
 		<!-- website-specific css & js -->
 		<script src="{{ url_for('static', filename='js/script.js') }}" crossorigin="anonymous"></script>
 		<link href="{{ url_for('static', filename='css/stylesheet.css') }}" rel="stylesheet" type="text/css" >
@@ -21,8 +23,6 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 		<!-- bootstrap related - Latest compiled JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-		<!-- Font Awesome -->
-		<script src="https://kit.fontawesome.com/129cd72893.js" crossorigin="anonymous"></script>
 	</head>
 
 	<body>
