--- a/templates/games-dev.html
+++ b/templates/games-dev.html
@@ -38,10 +38,10 @@
 				<div class="projects-header text-center">
 					<h1 style="display: inline-block;">Games</h1>
 					<img class="paper-plane" src="{{ url_for('static', filename='img/PaperPlane/32x32.png') }}" style="display: inline-block;">
-					<h4 class="pt-3">Check out some of <br> these <span class="purple-color-1">games<span>!</h4>
+					<h4 class="pt-4"><span class="purple-color-1">Games</span>, created for self learning and entertainement</h4>
 				</div>
 
-				<div class="games-wrapper pt-4 mt-5 row justify-content-center">
+				<div class="games-wrapper pt-5 mt-5 row justify-content-center">
 					<div class="col-12 col-sm-12 col-md-6 col-lg-4">
 						<div id="lollibird" class="game-card mb-5 mx-auto">
 							<div class="game-title-bar purple-bg-1 rounded-top">
