--- a/templates/web-projects.html
+++ b/templates/web-projects.html
@@ -33,8 +33,8 @@
 				</h3>
 			</a>
 		</header>
-		
-		<div class="main-wrapper">
+		<div class="websites-bg">
+			<div class="main-wrapper">
 			<div class="projects-header text-center">
 				<h1>Web Projects</h1>
 				<h4 class="pt-3">Check out the <br><span class="purple-color-1">web-based</span> projects!</h4>
@@ -161,6 +161,7 @@
 					</div>
 				</li>
 			</ul>
+			</div>
 		</div>
 
 		<footer class="purple-bg-1 text-white shadow-lg">
