Add paperplane fly effect

--- a/templates/games-dev.html
+++ b/templates/games-dev.html
@@ -45,10 +45,8 @@
 					<div class="col-12 col-sm-12 col-md-6 col-lg-4">
 						<div id="lollibird" class="game-card mb-5 mx-auto">
 							<div class="game-title-bar purple-bg-1 rounded-top">
-								<div class="row justify-content-between">
-									<h3 class="col-5 col-sm-5 m-2 px-4" style="color: ivory">LolliBird</h3>
-									<div id="lollibird-icon" class="game-icon col-3 col-sm-3 m-2">
-									</div>
+								<h3 class="game-header">LolliBird</h3>
+								<div id="lollibird-icon" class="game-icon">
 								</div>
 							</div>
 							<div class="game-content px-4 pt-4">
@@ -81,10 +79,8 @@
 					<div class="col-12 col-sm-12 col-md-6 col-lg-4">
 						<div id="sugarboy" class="game-card mb-5 mx-auto">
 							<div class="game-title-bar purple-bg-1 rounded-top">
-								<div class="row justify-content-between">
-									<h3 class="col-5 col-sm-5 m-2 px-4" style="color: ivory">SugarBoy</h3>
-									<div id="sugarboy-icon" class="game-icon col-3 col-sm-3 m-2">
-									</div>
+								<h3 class="game-header">SugarBoy</h3>
+								<div id="sugarboy-icon" class="game-icon">
 								</div>
 							</div>
 							<div class="game-content px-4 pt-4">
