--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -363,6 +363,18 @@ footer .copyright {
 .paper-plane {
 	margin-left: 12px;
 	margin-bottom: 20px;
+	animation-name: fly;
+	animation-duration: 3s;
+	animation-iteration-count: infinite;
+	animation-fill-mode: backwards;
+	animation-play-state: paused;
+
+}
+
+@keyframes fly {
+	0% {transform: translate(0px, 0px) rotateX(0deg) skewX(0deg);}
+	100% {transform: translate(150px, -150px) rotateX(150deg) skewX(-10deg);}
+
 }
 
 .game-card {
@@ -371,22 +383,55 @@ footer .copyright {
 
 .game-title-bar {
 	height: 50px;
+	position: relative;
+}
+
+.game-header {
+	position: absolute;
+	left: 15px;
+	top: 50%;
+	transform: translateY(-50%); 
+	color: ivory; 
+	text-align: center;
+}
+
+
+#lollibird-icon {
+	background-image: url('../img/games/lollibird.gif');
+	animation: move-game-icon, flip-lollibird;
+	animation-fill-mode: forwards;
+	animation-duration: 3s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
+
+#sugarboy-icon {
+	background-image: url('../img/games/sugarboy.gif');
+	transform: scale(-1.2, 1.2);
 }
 
 .game-icon {
+	position: absolute;
+	right: 13px;
+	width: 50px;
+	height: 50px;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: contain;
 }
 
-#lollibird-icon {
-	background-image: url('../img/Games/lollibird.png');
-	transform: scale(-0.9, 1);
+@keyframes move-game-icon {
+	0% {margin-right: 0px;}
+	33% {margin-right: 80px;}
+	100% {margin-right: 0px;}
 }
 
-#sugarboy-icon {
-	background-image: url('../img/Games/sugarboy.png');
-	transform: scale(-1.4, 1.4);
+@keyframes flip-lollibird {
+	0%   {transform: scale(-0.9, 1);}
+	32.99%   {transform: scale(-0.9, 1);}
+	33%  {transform: scale(0.9, 1);}
+	99.99%  {transform: scale(0.9, 1);}
+	100% {transform: scale(-0.9, 1);}
 }
 
 .game-content {
