--- a/templates/web-projects.html
+++ b/templates/web-projects.html
@@ -37,7 +37,7 @@
 			<div class="main-wrapper">
 			<div class="projects-header text-center">
 				<h1>Web Projects</h1>
-				<h4 class="pt-3">Check out the <br><span class="purple-color-1">web-based</span> projects!</h4>
+				<h4 class="pt-3">Feel free visiting the <br><span class="purple-color-1">websites</span></h4>
 			</div>
 			<ul class="project-list">
 				<li class="project">
