Add js label to Ben's Website

--- a/templates/web-projects.html
+++ b/templates/web-projects.html
@@ -122,6 +122,7 @@
 							<li class="html d-inline"></li>
 							<li class="css d-inline"></li>
 							<li class="bootstrap d-inline"></li>
+							<li class="js d-inline"></li>
 						</ul>
 						<h5>Ben's Website</h5>
 						<p>The website you're currently visiting &#128517.<br><br>
