--- a/templates/web-projects.html
+++ b/templates/web-projects.html
@@ -41,53 +41,6 @@
 			</div>
 			<ul class="project-list">
 				<li class="project">
-					<a href="http://benproject.pythonanywhere.com/" target="_blank">
-						<div class="project-img" style="background-image: url('./static/img/projects/digitalml.jpg');"></div>
-					</a>
-					<div class="project-info">
-						<ul class="used-skills">
-							<li class="html d-inline"></li>
-							<li class="css d-inline"></li>
-							<li class="bootstrap d-inline"></li>
-							<li class="js d-inline"></li>
-							<li class="python d-inline"></li>
-						</ul>
-						<h5>DigitalML</h5>
-						<p>Designed as a demo for a non-existent ML enterprise.<br>Made mostly for self-improvement purposes.<br>Don't forget trying out the <i>Digenerator</i>! &#128515</p>
-						<div class="project-buttons-div">
-							<a target="_blank" class="btn btn-primary bouncy" href="http://benproject.pythonanywhere.com/">
-								View Project
-							</a>
-							<a target="_blank" class="btn btn-outline-primary bouncy" style="animation-delay: 0.07s" href="https://github.com/putskan/DigitalML">
-								GitHub
-							</a>
-						</div>
-					</div>
-				</li>
-
-				<li class="project">
-					<a href="https://github.com/putskan/Ethi-s-Schnitzel" target="_blank">
-						<div class="project-img" style="background-image: url('./static/img/projects/CyberArray.jpg');"></div>
-					</a>
-					<div class="project-info">
-						<ul class="used-skills">
-							<li class="html d-inline"></li>
-							<li class="css d-inline"></li>
-							<li class="js d-inline"></li>
-							<li class="python d-inline"></li>
-							<li class="sql d-inline"></li>							
-						</ul>
-						<h5>CyberArray</h5>
-						<p>Cyber-looking, CLI-ish quiz for the Cyber Officers IDF course (i.e Kamanim).<br>Being currently used in the course. That was pretty much my first web project.</p>
-						<div class="project-buttons-div">
-							<a target="_blank" class="btn btn-outline-primary bouncy" style="animation-delay: 0.07s" href="https://github.com/putskan/Ethi-s-Schnitzel">
-								GitHub
-							</a>
-						</div>
-					</div>
-				</li>
-
-				<li class="project">
 					<a href="https://kamanaman101.pythonanywhere.com/" target="_blank">
 						<div class="project-img" style="background-image: url('./static/img/projects/KamanAman.jpg');"></div>
 					</a>
@@ -114,6 +67,81 @@
 				</li>
 
 				<li class="project">
+					<a href="http://benproject.pythonanywhere.com/" target="_blank">
+						<div class="project-img" style="background-image: url('./static/img/projects/digitalml.jpg');"></div>
+					</a>
+					<div class="project-info">
+						<ul class="used-skills">
+							<li class="html d-inline"></li>
+							<li class="css d-inline"></li>
+							<li class="bootstrap d-inline"></li>
+							<li class="js d-inline"></li>
+							<li class="python d-inline"></li>
+						</ul>
+						<h5>DigitalML</h5>
+						<p>Designed as a demo for a non-existent ML enterprise.<br>Made mostly for self-improvement purposes.<br>Don't forget trying out the <i>Digenerator</i>! &#128515</p>
+						<div class="project-buttons-div">
+							<a target="_blank" class="btn btn-primary bouncy" href="http://benproject.pythonanywhere.com/">
+								View Project
+							</a>
+							<a target="_blank" class="btn btn-outline-primary bouncy" style="animation-delay: 0.07s" href="https://github.com/putskan/DigitalML">
+								GitHub
+							</a>
+						</div>
+					</div>
+				</li>
+
+				<li class="project">
+					<a href="http://hashcracker.pythonanywhere.com/" target="_blank">
+						<div class="project-img" style="background-image: url('./static/img/projects/hashcracker.PNG');"></div>
+					</a>
+					<div class="project-info">
+						<ul class="used-skills">
+							<li class="html d-inline"></li>
+							<li class="css d-inline"></li>
+							<li class="typescript d-inline"></li>
+						</ul>
+						<h5>HashCracker</h5>
+						<p>
+						Got an MD5 to crack?<br>You've come to the right place! <br><br>
+						Just insert the Hash and let the magic happen.
+						</p>
+						<div class="project-buttons-div">
+							<a target="_blank" class="btn btn-primary bouncy" href="http://hashcracker.pythonanywhere.com/">
+								View Project
+							</a>
+							<a target="_blank" class="btn btn-outline-primary bouncy" style="animation-delay: 0.07s" href="https://github.com/putskan/HashCracker">
+								GitHub
+							</a>
+						</div>
+					</div>
+				</li>
+
+
+				<li class="project">
+					<a href="https://github.com/putskan/Ethi-s-Schnitzel" target="_blank">
+						<div class="project-img" style="background-image: url('./static/img/projects/CyberArray.jpg');"></div>
+					</a>
+					<div class="project-info">
+						<ul class="used-skills">
+							<li class="html d-inline"></li>
+							<li class="css d-inline"></li>
+							<li class="js d-inline"></li>
+							<li class="python d-inline"></li>
+							<li class="sql d-inline"></li>							
+						</ul>
+						<h5>CyberArray</h5>
+						<p>Cyber-looking, CLI-ish quiz for the Cyber Officers IDF course (i.e Kamanim).<br>Being currently used in the course. That was pretty much my first web project.</p>
+						<div class="project-buttons-div">
+							<a target="_blank" class="btn btn-outline-primary bouncy" style="animation-delay: 0.07s" href="https://github.com/putskan/Ethi-s-Schnitzel">
+								GitHub
+							</a>
+						</div>
+					</div>
+				</li>
+
+
+				<li class="project">
 					<a href="https://www.google.com/search?sxsrf=ALeKk02FR6q4XqoJXlQoXc7mBsNjf-DGFg:1598185612077&q=recursion&spell=1&sa=X&ved=2ahUKEwiEgcWtqbHrAhXox4UKHQ_mBy8QBSgAegQIDxAr&biw=1745&bih=836" target="_blank">
 						<div class="project-img" style="background-image: url('./static/img/projects/bens-site.jpg');"></div>
 					</a>
@@ -136,6 +164,28 @@
 						</div>
 					</div>
 				</li>
+				<li class="project">
+					<a href="http://tstopclock.pythonanywhere.com/" target="_blank">
+						<div class="project-img" style="background-image: url('./static/img/projects/tstopclock.PNG');"></div>
+					</a>
+					<div class="project-info">
+						<ul class="used-skills">
+							<li class="html d-inline"></li>
+							<li class="css d-inline"></li>
+							<li class="typescript d-inline"></li>
+						</ul>
+						<h5>TStopClock</h5>
+						<p>Simple stopwatch & clock coded for fun using mostly TypeScript and vanilla CSS &#129488</p>
+						<div class="project-buttons-div">
+							<a target="_blank" class="btn btn-primary bouncy" href="http://tstopclock.pythonanywhere.com/">
+								View Project
+							</a>
+							<a target="_blank" class="btn btn-outline-primary bouncy" style="animation-delay: 0.07s" href="https://github.com/putskan/TStopClock">
+								GitHub
+							</a>
+						</div>
+					</div>
+				</li>
 				
 				<li class="project">
 					<a href="http://mule9003.pythonanywhere.com/" target="_blank">
@@ -150,7 +200,7 @@
 							<li class="python d-inline"></li>
 						</ul>
 						<h5>Clown Website</h5>
-						<p>Made with &#10084; for an entertainment business.<br><br>Is not yet finished and fully responsive.</p>
+						<p>Made with &#10084; for an entertainment business.<br><br>Not fully responsive <br>and finished.</p>
 						<div class="project-buttons-div">
 							<a target="_blank" class="btn btn-primary bouncy" href="http://mule9003.pythonanywhere.com/">
 								View Project
